--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "jsdom": "^26.1.0",
+    "msw": "^2.7.6",
     "typescript": "^5",
     "vitest": "^3.1.2"
   }
